--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
-.container {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+}
+
+.container1 {
   background-color: blueviolet;
+  border-radius: 12px;
+  text-align: center;
 }
