--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,9 @@
 }
 
 .container1 {
+  width: 100%;
+  height: 4em;
+
   background-color: blueviolet;
   border-radius: 12px;
-  text-align: center;
 }
